--- a/src/components/card/basicCard.scss
+++ b/src/components/card/basicCard.scss
@@ -3,3 +3,8 @@
     margin: 2%;
     padding-top: 5px;
 }
+#verMas__button{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
