--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,17 +6,12 @@
   width: 100%;
 }
 
-#menu__navbar__items {
-  display: flex;
-  justify-content: space-around;
-  width: 90%;
-}
-
 a {
   text-decoration: none;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: x-large;
+  font-size: large;
   color: black;
+  margin: 5px 10px;
 }/*# sourceMappingURL=Navbar.css.map */
