--- a/src/components/card/basicCard.css
+++ b/src/components/card/basicCard.css
@@ -2,4 +2,10 @@
   background-color: #bec0bf;
   margin: 2%;
   padding-top: 5px;
+}
+
+#verMas__button {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }/*# sourceMappingURL=basicCard.css.map */
