--- a/src/components/card/basicCard.css
+++ b/src/components/card/basicCard.css
@@ -8,4 +8,14 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+@media (max-width: 768px) {
+  #basicCard {
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    width: 100%;
+    height: auto;
+  }
 }/*# sourceMappingURL=basicCard.css.map */
