--- a/src/components/card/basicCard.css
+++ b/src/components/card/basicCard.css
@@ -4,10 +4,11 @@
   padding-top: 5px;
 }
 
-#verMas__button {
+.card__text {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
+  align-items: center;
 }
 
 @media (max-width: 768px) {
