--- a/src/components/card/basicCard.scss
+++ b/src/components/card/basicCard.scss
@@ -3,12 +3,13 @@
     margin: 2%;
     padding-top: 5px;
 }
-#verMas__button{
+
+.card__text{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
 }
-
 
 @media(max-width: 768px){
     #basicCard{
