--- a/src/components/Checkout/Checkout.scss
+++ b/src/components/Checkout/Checkout.scss
@@ -6,3 +6,9 @@
     justify-content: space-around;
     align-items: center;
 }
+
+.form-group{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
