--- a/src/components/LoginScreen/LoginScreen.scss
+++ b/src/components/LoginScreen/LoginScreen.scss
@@ -1,51 +1,51 @@
-
 .login-screen {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(104,202,247,1);
-    opacity: 0.8;
-    background: repeating-linear-gradient( 45deg, #0a0e56, #0a0e56 14.5px, rgba(104,202,247,1) 14.5px, rgba(104,202,247,1) 72.5px );
-    h2{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: black;
+	//background-color: rgba(104,202,247,1);
+	//opacity: 0.8;
+	// background: repeating-linear-gradient( 45deg, #0a0e56, #0a0e56 14.5px, rgba(104,202,247,1) 14.5px, rgba(104,202,247,1) 72.5px );
+	h2 {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
 
-    .loginImg{
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-    }
+	.loginImg {
+		display: flex;
+		align-items: center;
+		justify-content: space-around;
+	}
 
-    .linkForm{
-        margin-left: 70px;
-    }
-    .formLogin{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
+	.linkForm {
+		margin-left: 70px;
+	}
+	.formLogin {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
 
-    .buttonsForm{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
+	.buttonsForm {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
 
-    .login {
-        width: 600px;
-        padding: 30px;
-        border-radius: 10px;
-        background-color: #fff;
-    }
+	.login {
+		width: 600px;
+		padding: 30px;
+		border-radius: 10px;
+		background-color: #fff;
+	}
 
-    .error {
-        color: red;
-        font-weight: 700;
-        font-size: 16px;
-    }
+	.error {
+		color: red;
+		font-weight: 700;
+		font-size: 16px;
+	}
 }
